--- a/app/scss/modules/_contact-section.scss
+++ b/app/scss/modules/_contact-section.scss
@@ -5,10 +5,6 @@
 		padding-bottom: 180px;
 	}
 
-	@include desktop {
-		padding-bottom: 330px;
-	}
-
 	/* Possible fixed footer */
 	background-color: $bg-color;
 
